--- a/templates/sample/index.html
+++ b/templates/sample/index.html
@@ -4,16 +4,18 @@
 <head>
 <title>LawsForMe</title>
 <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
-<link rel="stylesheet" type="text/css" href="gila-screen.css" media="screen" title="Gila (screen)" />
-<link rel="stylesheet" type="text/css" href="gila-print.css" media="print" />
+<link rel="stylesheet" type="text/css" href="style/gila-screen.css" media="screen" title="Gila (screen)" />
+<link rel="stylesheet" type="text/css" href="style/gila-print.css" media="print" />
+<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
     
     
 <body>
 <!-- ##### Header ##### -->
 <div id="header">
-  <h1 class="headerTitle"> <a href="#">Laws<span>ForMe<sup>TM</sup></span></a> </h1>
-  <div class="subHeader"> <span class="doNotDisplay">Navigation: </span> <a href="#">Home</a> | <a href="#">Forums</a> | <a href="#">Login</a> | <a href="#">Contact Us</a> | <a href="#">About Us</a> </div>
+    <a href="index.html" class="headerTitle" ><img src="img/logo.PNG" alt="LawsForMe Homepage" ></a>
+    <div class="login"><a href="#">Sign Up</a> | <a href="login.html">Sign In</a> </div>
+    <div class="subHeader"> <span class="doNotDisplay">Navigation: </span> <a href="#">Home</a> | <a href="#">Forums</a> | <a href="#">Account</a> | <a href="#">Contact Us</a> | <a href="#">About Us</a> </div>
 </div>
 <div id="side-bar">
   <!-- ##### Left Sidebar ##### -->
@@ -103,8 +105,8 @@
 <!-- ##### Footer ##### -->
 <div id="footer">
   <div class="doNotPrint"> <a href="#">Tell a Friend</a> | <a href="#">Privacy Policy</a> | <a href="#">Site Map</a> | <a href="#">Feedback</a> | <a href="#">Help</a> </div>
-  <div> Copyright &copy; 2003, ST<sup>2</sup> |
-    Modified on 2003-May-03 by <a href="http://www.oswd.org/email.phtml?user=haran">Talha Azhar</a> </div>
+  <div> Copyright &copy; 2017, ST<sup>2</sup> |
+    Modified on 2017-Oct-20 by <a href="http://www.oswd.org/email.phtml?user=haran">Talha Azhar</a> </div>
 </div>
 </body>
 </html>
