--- a/templates/index.html
+++ b/templates/index.html
@@ -2,18 +2,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-AU">
     
 <head>
-<title>LawsForMe</title>
-<meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
-<link rel="stylesheet" type="text/css" href="style/gila-screen.css" media="screen" title="Gila (screen)" />
-<link rel="stylesheet" type="text/css" href="style/gila-print.css" media="print" />
-<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <title>LawsForMe</title>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='stylesheets/gila-screen.css') }}" media="screen" title="Gila (screen)" />
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='stylesheets/gila-print.css') }}" media="print" />
+    <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon">
 </head>
     
     
 <body>
 <!-- ##### Header ##### -->
 <div id="header">
-    <a href="index.html" class="headerTitle" ><img src="img/logo.PNG" alt="LawsForMe Homepage" ></a>
+    <a href="index.html" class="headerTitle" ><img src="{{ url_for('static', filename='images/logo.PNG') }}" alt="LawsForMe Homepage" ></a>
     <div class="login"><a href="#">Sign Up</a> | <a href="login.html">Sign In</a> </div>
     <div class="subHeader"> <span class="doNotDisplay">Navigation: </span> <a href="#">Home</a> | <a href="#">Forums</a> | <a href="#">Account</a> | <a href="#">Contact Us</a> | <a href="#">About Us</a> </div>
 </div>
