Fixed the slash error

--- a/templates/createAccount.html
+++ b/templates/createAccount.html
@@ -9,7 +9,7 @@
 {% endblock %}
  
  {% block content %}
-  <form method="post" action="/createAccount">
+  <form method="post" action="/createAccount/">
     <p>Username <input type = "text" name = "username" /></p>
     <p>Password <input type = "text" name = "password" /></p>
     <p>Email <input type = "text" name = "email" /></p>
