--- a/templates/createAccount.html
+++ b/templates/createAccount.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 
-{% block title %} {{author}}'s page {% endblock %}
+{% block title %} Account Creation {% endblock %}
 
 {% block head %} 
 
