--- a/templates/login.html
+++ b/templates/login.html
@@ -60,7 +60,7 @@
     
     
 <!-- ##### Main Copy ##### -->
-<form id="login-screen" action = "/login/">
+<form id="login-screen" method = "post" action = "/login/">
     <h3>Login to LawsForMe</h3>
     <p>Sign in using your Registered Account</p>
     <input type="text" name="username" placeholder="Username">
