--- a/templates/template.html
+++ b/templates/template.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-AU">
 
+<head>
+    <title>LawsForMe</title>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='stylesheets/gila-screen.css') }}" media="screen" title="Gila (screen)" />
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='stylesheets/gila-print.css') }}" media="print" />
+    <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="/js/my.js"></script>
+</head>
 
 
 <body>
