some updates to fix some stuff

--- a/templates/forum.html
+++ b/templates/forum.html
@@ -18,8 +18,8 @@
     </form>
 
     <select class = formSort id="soflow" name="sort" form="sub-form">
-        <option value="num DESC">Most Comments</option>
-        <option value="num ASC">Least Comments</option>
+        <option value="num DESC NULLS LAST">Most Threads</option>
+        <option value="num ASC NULLS FIRST">Least Threads</option>
         <option value="created_at DESC">Most Recent</option>
         <option value="created_at ASC">Least Recent</option>
     </select>
