--- a/templates/thread.html
+++ b/templates/thread.html
@@ -4,6 +4,24 @@
     
 <!-- ##### Main Copy ##### -->
 
+    <form class = formSort method="post" action="/forum/{{fn}}" id="sub-form">
+        <input type="submit" value = "submit" id="lala">
+    </form>
+
+    <select class = formSort id="soflow" name="sort" form="sub-form">
+        <option value="num DESC NULLS LAST">Most Comments</option>
+        <option value="num ASC NULLS FIRST">Least Comments</option>
+        <option value="created_at DESC">Most Recent</option>
+        <option value="created_at ASC">Least Recent</option>
+    </select>
+
+
+    <script type="text/javascript">
+            var my = '{{t}}';
+            SelectElement( my );
+    </script>
+
+
 {% for t in com %}
     <div class = 'thread' onclick="window.location.href = 'discussions/{{ t[1] }}';">
         <h2>{{t[2]}}</h2>
