--- a/templates/comments.html
+++ b/templates/comments.html
@@ -20,6 +20,12 @@
         <input  type="submit" value="Submit">
     </form>
 
+    <script type="text/javascript">
+            var my = '{{t}}';
+            SelectElement( my );
+    </script>
+
+
 
 
 </div>
