--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
             <h3>Since you are interested in {{ interest|e }}</h3>
             <ul>
             {% for law in laws_of_interests.get(interest) %}
-                <li>{{ law|e }}</li>
+                <a href="/cake/{{ law|e }}"><li>{{ law|e }}</li></a>
             {% endfor %}
             </ul>
         {% endfor %}
