--- a/templates/template.html
+++ b/templates/template.html
@@ -22,7 +22,7 @@
     {% else %}
     <div class="login"><a href="/createAccount/">Sign Up</a> | <a href="/login/">Sign In</a> </div>
     {% endif %}
-    <div class="subHeader"> <span class="doNotDisplay">Navigation: </span> <a href="/">Home</a> | <a href="/forum/">Forums</a> | <a href="#">Account</a> | <a href="#">Contact Us</a> | <a href="#">About Us</a> </div>
+    <div class="subHeader"> <span class="doNotDisplay">Navigation: </span> <a href="/">Home</a> | <a href="/forum/">Forums</a> | <a href="/account/">Account</a> | <a href="#">Contact Us</a> | <a href="#">About Us</a> </div>
 
 </div>
 <div id="side-bar">
