--- a/templates/createAccount.html
+++ b/templates/createAccount.html
@@ -11,6 +11,8 @@
     <p>Username <input type = "text" name = "username" /></p><p style="color: red">{{ username }}</p>
     <p>Password <input type = "password" name = "password" /></p><p style="color: red">{{ password }}</p>
     <p>Email <input type = "text" name = "email" /></p>
+    <p>Firstname <input type="text" name = "firstname"/></p>
+    <p>Lastname <input type="text" name="lastname"/></p>
 	<p>State
 		<select name="state">
 		<option selected="selected" value="AL">Alabama</option>
